# hackedbox

./: .tm_project.cache  AUTHORS  ChangeLog  ChangeLog-0.7.0  INSTALL  LICENSE  Makefile.am  Makefile.in  README  TODO  blackbox.prj  bootstrap  config.h.in  configure  configure.backup  configure.in  hackbox.prj  hackbox.prj.bak  hackbox.pws  mkinstalldirs
bbkeys/: Makefile  config.cache  config.h  config.status  mkinstalldirs  version.h
bbkeys/data/: Makefile
bbkeys/doc/: Makefile  bbkeys.1
bbkeys/redhat/: Makefile  bbkeys.spec
bbkeys/src/: Makefile  bbkeysconf.pl
data/: Makefile.am  Makefile.in  README  README.menu  README.style  menu.in
data/backgrounds/: Makefile  Makefile.am  Makefile.in
data/styles/: Hackedbox  Hackedbox.in  Makefile  Makefile.am  Makefile.in
data/styles/CVS/: Entries  Repository
doc/: HackedBox.html  Hackedbox.xml  Makefile  Makefile.am  Makefile.in  epist.1.in  hackedbox.1  hackedbox.1.in  test.pl
doc/fr_FR/: Makefile  Makefile.in  blackbox.1  blackbox.1.in
doc/ja_JP/: Makefile  Makefile.in  blackbox.1
doc/nl_NL/: Makefile  Makefile.in  blackbox.1
doc/sl_SI/: Makefile  Makefile.in  blackbox.1  blackbox.1.in
epist/: AUTHORS  COPYING  Makefile  Makefile.am  Makefile.in  Modifiers.cc  README  epist  epist.cc  epist.hh  keys
nls/: Makefile  Makefile.am  Makefile.in  blackbox-nls.hh
nls/C/: Configmenu.m  Makefile  Makefile.am  Makefile.in  Screen.m  Translation.m  blackbox.cat  bsetroot.m  main.m
nls/da_DK/: Makefile  Makefile.am  Makefile.in  Translation.m  blackbox.cat
nls/de_DE/: Makefile  Makefile.am  Makefile.in  Translation.m  blackbox.cat
nls/es_AR/: Makefile  Makefile.am  Makefile.in  Translation.m  blackbox.cat
nls/es_ES/: Makefile  Makefile.in  Translation.m  blackbox.cat
nls/et_EE/: Makefile  Makefile.in
nls/fr_FR/: Makefile  Makefile.in  Translation.m  blackbox.cat
nls/hu_HU/: Makefile  Makefile.in  Translation.m  blackbox.cat
nls/it_IT/: Makefile  Makefile.in  Translation.m  blackbox.cat
nls/ja_JP/: Makefile  Makefile.in  Translation.m  blackbox.cat
nls/ko_KR/: Makefile  Makefile.in  Translation.m  blackbox.cat
nls/nl_NL/: Makefile  Makefile.am  Makefile.in  Translation.m  blackbox.cat
nls/no_NO/: Makefile  Makefile.in  Translation.m  blackbox.cat
nls/pl_PL/: Makefile  Makefile.in  Translation.m  blackbox.cat
nls/pt_BR/: Makefile  Makefile.in  Translation.m  blackbox.cat
nls/ro_RO/: Makefile  Makefile.in  Translation.m  blackbox.cat
nls/ru_RU/: Makefile  Makefile.in  Translation.m  blackbox.cat
nls/sk_SK/: Makefile  Makefile.in  Translation.m  blackbox.cat
nls/sl_SI/: Makefile  Makefile.in  Translation.m  blackbox.cat
nls/sv_SE/: Makefile  (+3 more)
src/: BaseDisplay.cc  BaseDisplay.hh  Basemenu.cc  Basemenu.hh  Clientmenu.cc  Clientmenu.hh  Color.cc  Configmenu.cc  Configmenu.hh  GCCache.cc  Icon.hh  Iconmenu.cc  Iconmenu.hh  Image.cc  Image.hh  ImageControl.cc  LinkedList.cc  LinkedList.hh  Makefile.am  Makefile.in  Netizen.cc  Netizen.hh  Rootmenu.cc  Rootmenu.hh  Screen.cc  Screen.hh  Timer.cc  Timer.hh  Window.cc  Window.hh  Windowmenu.hh  Workspace.cc  Workspacemenu.cc  Workspacemenu.hh  blackbox.cc  blackbox.cc.in  blackbox.hh  i18n.cc  inithack.in  main.cc
util/: Makefile  Makefile.am  Makefile.in  bgmenu.mk  bgmenu.mk.in  bsetbg  bsetroot  bsetroot.cc  hgmenu.mk.in  hsetbg
(+20 files in other folders)
