# data/styles/Makefile.am for Hackedbox

styledir = $(pkgdatadir)/styles
MAINTAINERCLEANFILES = Makefile.in
style_DATA = Hackedbox artwiz bluebox cthulhain deep flux frobozz frobust nyz nyzclone operation outcomes shade steelblue steelblue2 the_orange trisb twice

distclean-local:
	rm -f *\~

uninstall-am:
	rmdir $(styledir)
